# tsdownsample

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  testing.py
.github/: FUNDING.yml
.github/workflows/: ci-downsample_rs.yml  ci-tsdownsample.yml  codeql.yml  codspeed.yml
downsample_rs/: Cargo.toml  LICENSE  README.md
downsample_rs/benches/: bench_fpcs.rs  bench_lttb.rs  bench_m4.rs  bench_minmax.rs  bench_minmaxlttb.rs  results
downsample_rs/dev_utils/: Cargo.toml
downsample_rs/dev_utils/src/: config.rs  lib.rs  utils.rs
downsample_rs/src/: fpcs.rs  helpers.rs  lib.rs  lttb.rs  m4.rs  minmax.rs  minmaxlttb.rs  searchsorted.rs  types.rs  utils.rs
downsample_rs/src/lttb/: mod.rs  scalar.rs  utils.rs
downsample_rs/src/m4/: generic.rs  mod.rs  scalar.rs  simd.rs
downsample_rs/src/minmax/: generic.rs  scalar.rs  simd.rs
downsample_rs/src/minmaxlttb/: generic.rs  mod.rs  scalar.rs  simd.rs
notebooks/: benches.ipynb  downsample_times_processed.csv  requirements.txt
src/: lib.rs
tests/: requirements-linting.txt  test_algos_python_compliance.py  test_config.py  test_rust_mods.py  test_tsdownsample.py
tests/benchmarks/: test_downsamplers.py
tsdownsample/: __init__.py  downsamplers.py  downsampling_interface.py
tsdownsample/_python/: downsamplers.py
tsdownsample/_rust/: __init__.py
