[package]
name = "tsdownsample"  # Same name as the Python package
version = "0.1.0"
edition = "2021"
authors = ["Jeroen Van Der Donckt"]
description = "Python bindings for time series downsampling algorithms"
repository = "https://github.com/predict-idlab/tsdownsample"
license = "MIT"

[dependencies]
downsample_rs = { path = "downsample_rs", features = ["half"]}
pyo3 = { version = "0.19", features = ["extension-module"] }
numpy = { version = "0.19", features = ["half"] }
half = { version = "2.1", default-features = false }
paste = { version = "1.0.9", default-features = false }

[lib]
name = "tsdownsample"
crate-type = ["cdylib"]
