[tool.poetry]
name = "tsdownsample"
version = "0.1.0a0"
description = "Time series downsampling in rust"
authors = ["Jeroen Van Der Donckt"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/predict-idlab/tsdownsample"
keywords = ["time series", "downsampling", "rust", "data science", "visualization"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = ">=1.21"
pandas = ">=1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
