[metadata]
name = tsdownsample
version = 0.1.0
license = MIT
url = https://github.com/predict-idlab/tsdownsample
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
packages = tsdownsample
zip_safe = False
setup_requires = setuptools-rust >= 0.12.1;
python_requires = >=3.6
include_package_data = True