[package]
name = "downsample_rs"
version = "0.1.0"
edition = "2021"
authors = ["Jeroen Van Der Donckt"]
description = "Downsample time series data"
license = "MIT"

[dependencies]
# TODO: perhaps use polars?
argminmax = { version = "0.6.1", features = ["half"] }
half = { version = "2.3.1", default-features = false , features=["num-traits"], optional = true}
num-traits = { version = "0.2.17", default-features = false }
once_cell = "1"
rayon = { version = "1.8.0", default-features = false }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
rstest_reuse = { version = "0.6", default-features = false }
criterion = "0.5.1"
dev_utils = { path = "dev_utils" }

[[bench]]
name = "bench_m4"
harness = false

[[bench]]
name = "bench_minmax"
harness = false

[[bench]]
name = "bench_lttb"
harness = false

[[bench]]
name = "bench_minmaxlttb"
harness = false
