[package]
name = "downsample_rs"
version = "0.1.0"
edition = "2021"
authors = ["Jeroen Van Der Donckt"]
description = "Downsample time series data"
license = "MIT"

[dependencies]
# TODO: perhaps use polars?
argminmax = { version = "0.6", features = ["half"] }
half = { version = "2.7", default-features = false , features=["num-traits"], optional = true}
num-traits = { version = "0.2", default-features = false }
once_cell = "1"
rayon = { version = "1", default-features = false }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
rstest_reuse = { version = "0.7", default-features = false }
criterion = "0.7"
dev_utils = { path = "dev_utils" }

[[bench]]
name = "bench_m4"
harness = false

[[bench]]
name = "bench_minmax"
harness = false

[[bench]]
name = "bench_lttb"
harness = false

[[bench]]
name = "bench_minmaxlttb"
harness = false
