[package]
name = "dev_utils"
version = "0.1.1"
authors = ["Jeroen Van Der Donckt"]
edition = "2021"
description = "Shared utilities for development (tests & benchmarks)"

[dependencies]
rand = { version = "0.7.2", default-features = false }
rand_distr = { version = "0.2.2", default-features = false }
