[package]
name = "dev_utils"
version = "0.1.1"
authors = ["Jeroen Van Der Donckt"]
edition = "2021"
description = "Shared utilities for development (tests & benchmarks)"

[dependencies]
num-traits = { version = "0.2", default-features = false }
half = { version = "2.7", default-features = false, features = ["num-traits", "rand_distr"] }
rand = { version = "0.9", default-features = false }
